--- a/.gitignore
+++ b/.gitignore
@@ -139,3 +139,17 @@ Desktop.ini
 # ESLint
 ######################
 .eslintcache
+/pet-clinic-data/target/classes/application.properties
+/pet-clinic-web/target/surefire-reports/com.springframework.mypetclinic.MyPetClinicApplicationTests.txt
+/pet-clinic-data/target/maven-status/maven-compiler-plugin/compile/default-compile/createdFiles.lst
+/pet-clinic-data/target/maven-status/maven-compiler-plugin/testCompile/default-testCompile/createdFiles.lst
+/pet-clinic-web/target/maven-status/maven-compiler-plugin/compile/default-compile/createdFiles.lst
+/pet-clinic-web/target/maven-status/maven-compiler-plugin/testCompile/default-testCompile/createdFiles.lst
+/pet-clinic-data/target/maven-status/maven-compiler-plugin/compile/default-compile/inputFiles.lst
+/pet-clinic-data/target/maven-status/maven-compiler-plugin/testCompile/default-testCompile/inputFiles.lst
+/pet-clinic-web/target/maven-status/maven-compiler-plugin/compile/default-compile/inputFiles.lst
+/pet-clinic-web/target/maven-status/maven-compiler-plugin/testCompile/default-testCompile/inputFiles.lst
+/pet-clinic-web/target/pet-clinic-web-0.0.1-SNAPSHOT.jar.original
+/pet-clinic-data/target/maven-archiver/pom.properties
+/pet-clinic-web/target/maven-archiver/pom.properties
+/pet-clinic-web/target/surefire-reports/TEST-com.springframework.mypetclinic.MyPetClinicApplicationTests.xml
