--- a/.gitignore
+++ b/.gitignore
@@ -153,3 +153,4 @@ Desktop.ini
 /pet-clinic-data/target/maven-archiver/pom.properties
 /pet-clinic-web/target/maven-archiver/pom.properties
 /pet-clinic-web/target/surefire-reports/TEST-com.springframework.mypetclinic.MyPetClinicApplicationTests.xml
+/pet-clinic-web/target/classes/templates/index.html
