Adding vet page and controller

--- a/.gitignore
+++ b/.gitignore
@@ -154,3 +154,4 @@ Desktop.ini
 /pet-clinic-web/target/maven-archiver/pom.properties
 /pet-clinic-web/target/surefire-reports/TEST-com.springframework.mypetclinic.MyPetClinicApplicationTests.xml
 /pet-clinic-web/target/classes/templates/index.html
+/pet-clinic-web/target/
